--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
+    "mongodb": "^3.2.7",
     "pg": "^7.11.0",
     "regenerator-runtime": "^0.13.2"
   },
