--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "nyc": "^14.1.1"
   },
   "scripts": {
-    "test": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha build/test/ --timeout 5000000",
+    "test": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha build/test/user.js --timeout 5000000 --exit",
     "local_test": "npm run build && npm test",
-    "dev-start": "babel-watch src/server.js",
+    "dev-start": "cross-env NODE_ENV=development babel-watch src/server.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "build": "npx babel src --out-dir build",
     "start": "npm run build && node build/server.js"
