--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "nyc": "^14.1.1"
   },
   "scripts": {
-    "test": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha build/test/user.js --timeout 5000000 --exit",
+    "test": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha build/test/user.js build/test/cart.js --timeout 5000000 --exit",
     "local_test": "npm run build && npm test",
     "dev-start": "cross-env NODE_ENV=development babel-watch src/server.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
